k8s/gitlab/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: gitlab
