k8s/gitlab/gitlab-ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`gitlab.zcbb.dashboard`)
    kind: Rule
    services:
    - name: gitlab
      port: 80
